--- a/api/SignalR.Api/appsettings.json
+++ b/api/SignalR.Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Keycloak": {
+    "Authority": "http://localhost:8080/realms/myrealm",
+    "Audience": "account"
+  }
 }
