feat: redis backplane

--- a/api/SignalR.Api/appsettings.json
+++ b/api/SignalR.Api/appsettings.json
@@ -8,6 +8,10 @@
   "AllowedHosts": "*",
   "Keycloak": {
     "Authority": "http://localhost:8080/realms/myrealm",
-    "Audience": "account"
+    "Audience": "account",
+    "Issuer": "http://localhost:8080/realms/myrealm"
+  },
+  "ConnectionStrings": {
+    "Redis": "redis:6379"
   }
 }
