refactor: split concers on BE

--- a/api/SignalR.Api/appsettings.json
+++ b/api/SignalR.Api/appsettings.json
@@ -12,6 +12,6 @@
     "Issuer": "http://localhost:8080/realms/myrealm"
   },
   "ConnectionStrings": {
-    "Redis": "redis:6379"
+    "Redis": "localhost:6379"
   }
 }
