feat: add persistance with EF Core

--- a/api/SignalR.Api/appsettings.json
+++ b/api/SignalR.Api/appsettings.json
@@ -12,6 +12,7 @@
     "Issuer": "http://localhost:8080/realms/myrealm"
   },
   "ConnectionStrings": {
-    "Redis": "localhost:6379"
+    "Redis": "localhost:6379",
+    "Postgres": "Host=localhost;Port=5433;Database=api;Username=api;Password=api"
   }
 }
