--- a/compose.yml
+++ b/compose.yml
@@ -6,7 +6,7 @@ services:
     container_name: keycloak
     environment:
       KC_DB: postgres
-      KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
+      KC_DB_URL: jdbc:postgresql://postgres-keycloak:5432/keycloak
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: keycloak
       KC_BOOTSTRAP_ADMIN_USERNAME: admin
@@ -15,13 +15,13 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      - postgres
+      - postgres-keycloak
     volumes:
       - ./realm-config:/opt/keycloak/data/import
 
-  postgres:
+  postgres-keycloak:
     image: postgres:16.2
-    container_name: postgres
+    container_name: postgres-keycloak
     environment:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
@@ -29,7 +29,19 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_data_keycloak:/var/lib/postgresql/data
+
+  postgres-api:
+    image: postgres:16.2
+    container_name: postgres-api
+    environment:
+      POSTGRES_DB: api
+      POSTGRES_USER: api
+      POSTGRES_PASSWORD: api
+    ports:
+      - "5433:5432"
+    volumes:
+      - postgres_data_api:/var/lib/postgresql/data
 
   redis:
     image: redis:7.2
@@ -46,11 +58,13 @@ services:
       Keycloak__Authority: http://keycloak:8080/realms/myrealm
       Keycloak__Audience: account
       ConnectionStrings__Redis: redis:6379
+      ConnectionStrings__Postgres: Host=postgres-api;Port=5432;Database=api;Username=api;Password=api
     ports:
       - "8001:80"
     depends_on:
       - keycloak
-      - postgres
+      - postgres-keycloak
+      - postgres-api
       - redis
 
   api2:
@@ -62,11 +76,13 @@ services:
       Keycloak__Authority: http://keycloak:8080/realms/myrealm
       Keycloak__Audience: account
       ConnectionStrings__Redis: redis:6379
+      ConnectionStrings__Postgres: Host=postgres-api;Port=5432;Database=api;Username=api;Password=api
     ports:
       - "8002:80"
     depends_on:
       - keycloak
-      - postgres
+      - postgres-keycloak
+      - postgres-api
       - redis
 
   app:
@@ -80,4 +96,5 @@ services:
       - api
 
 volumes:
-  postgres_data:
+  postgres_data_keycloak:
+  postgres_data_api:
