--- a/app/signalr-app/package.json
+++ b/app/signalr-app/package.json
@@ -15,7 +15,8 @@
     "isbot": "^5.1.17",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.4.1"
+    "react-router": "^7.4.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@react-router/dev": "^7.4.1",
