--- a/app/signalr-app/package.json
+++ b/app/signalr-app/package.json
@@ -10,12 +10,22 @@
   },
   "dependencies": {
     "@microsoft/signalr": "^8.0.7",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-slot": "^1.2.0",
     "@react-router/node": "^7.4.1",
     "@react-router/serve": "^7.4.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "isbot": "^5.1.17",
+    "lucide-react": "^0.503.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.1",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "tw-animate-css": "^1.2.8",
     "zod": "^3.24.3"
   },
   "devDependencies": {
