--- a/app/signalr-app/package.json
+++ b/app/signalr-app/package.json
@@ -18,6 +18,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.17",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
